[tool.poetry]
name = "spotify-last-thirty-likes"
version = "0.1.0"
description = ""
authors = ["John Sutherland <john@sneeu.com>"]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.21.0"
click = "^8.1.3"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
mypy = "^0.982"
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
flake8-bugbear = "^22.10.27"
pytest-cov = "^4.0.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
